--- a/x86-64+.config
+++ b/x86-64+.config
@@ -9,6 +9,7 @@ CONFIG_PACKAGE_TAR_BZIP2=y
 CONFIG_PACKAGE_TAR_GZIP=y
 CONFIG_PACKAGE_TAR_XZ=y
 CONFIG_PACKAGE_TAR_ZSTD=y
+# CONFIG_PACKAGE_adbyby is not set
 CONFIG_PACKAGE_bash=y
 CONFIG_PACKAGE_bind-client=y
 CONFIG_PACKAGE_bind-libs=y
@@ -67,6 +68,7 @@ CONFIG_PACKAGE_libruby=y
 CONFIG_PACKAGE_libyaml=y
 CONFIG_PACKAGE_libzstd=y
 CONFIG_PACKAGE_lsblk=m
+# CONFIG_PACKAGE_luci-app-adbyby-plus is not set
 CONFIG_PACKAGE_luci-app-diskman=m
 CONFIG_PACKAGE_luci-app-fileassistant=y
 CONFIG_PACKAGE_luci-app-frpc=y
